# multicore_engine

./: .clang-format  .gitignore  .gitlab-ci-edges-env.yml  .gitlab-ci.yml  .gitmodules  CMakeConfig.txt  CMakeLists.txt  CMakeUtils.txt  Doxyfile  LICENSE  README.md  UseModules.cmake  build_clang_debug.sh  build_clang_release.sh  build_gcc_debug.sh  build_gcc_release.sh  create_license_pack_linux.sh  create_license_pack_windows.bat  default.cfg  generate_cloc_report.sh  generate_doc.bat  multicore_engine.cppcheck  premake5.lua  prepare_buildpaths.bat  prepare_buildpaths.sh  run_cppcheck.sh  sanitizer_blacklist.txt
multicore_engine_base/: .cproject  .project  CMakeLists.txt
multicore_engine_base/include/: exceptions.hpp  namespace_doc.hpp
multicore_engine_base/include/asset/: load_unit_meta_data.hpp  model_meta_data.hpp  pack_file_meta_data.hpp
multicore_engine_base/include/asset_gen/: base_ast.hpp  load_unit_description_ast.hpp  load_unit_description_ast_compare.hpp  load_unit_description_ast_fusion.hpp  load_unit_description_parser.hpp  load_unit_gen.hpp  model.hpp  model_exporter.hpp  obj_model_parser.hpp  pack_file_description_ast.hpp  pack_file_description_ast_compare.hpp  pack_file_description_ast_fusion.hpp  pack_file_description_parser.hpp  pack_file_gen.hpp  static_model.hpp  static_model_exporter.hpp
multicore_engine_base/include/bstream/: asset_ibstream.hpp  buffer_ibstream.hpp  debug_print_obstream.hpp  ibstream.hpp  iobstream.hpp  iostream_bstream.hpp  istream_bstream.hpp  obstream.hpp  vector_iobstream.hpp
multicore_engine_base/include/core/: version.hpp
multicore_engine_base/include/mce/: exceptions.hpp  namespace_doc.hpp
multicore_engine_base/include/memory/: aligned.hpp
multicore_engine_base/include/model/: model_format.hpp
multicore_engine_base/include/util/: composite_magic_number.hpp  compression.hpp  error_helper.hpp  offset_range.hpp  path_util.hpp  program_name.hpp  string_tools.hpp  unused.hpp
multicore_engine_base/src/asset/: load_unit_meta_data.cpp  pack_file_meta_data.cpp
multicore_engine_base/src/asset_gen/: load_unit_gen.cpp  model_exporter.cpp  obj_model_parser.cpp  pack_file_description_parser.cpp  pack_file_gen.cpp
multicore_engine_base/src/bstream/: asset_ibstream.cpp  buffer_ibstream.cpp  debug_print_obstream.cpp  ibstream.cpp  iostream_bstream.cpp  istream_bstream.cpp  obstream.cpp  vector_iobstream.cpp
multicore_engine_base/src/core/: version.cpp.in  version.static.cpp
multicore_engine_base/src/model/: dump_model.cpp
multicore_engine_base/src/util/: compression.cpp  path_util.cpp  program_name.cpp  string_tools.cpp
multicore_engine_core/: .cproject  .project  CMakeLists.txt  entity_example.etf  entity_example.etl
multicore_engine_core/include/asset/: asset.hpp  asset_defs.hpp  asset_loader.hpp  asset_manager.hpp  dummy_asset.hpp  file_asset_loader.hpp  file_reader.hpp  load_unit.hpp  load_unit_asset_loader.hpp  load_unit_meta_data.hpp  native_file_reader.hpp  pack_file_meta_data.hpp  pack_file_reader.hpp
multicore_engine_core/include/asset_gen/: load_unit_description_ast.hpp  load_unit_description_ast_compare.hpp  load_unit_description_ast_fusion.hpp  load_unit_description_parser.hpp  load_unit_gen.hpp  pack_file_description_ast.hpp  pack_file_description_ast_compare.hpp  pack_file_description_ast_fusion.hpp  pack_file_description_parser.hpp  pack_file_gen.hpp
multicore_engine_core/include/bstream/: asset_ibstream.hpp  buffer_ibstream.hpp  ibstream.hpp  iobstream.hpp  iostream_bstream.hpp  istream_bstream.hpp  obstream.hpp  vector_iobstream.hpp
multicore_engine_core/include/config/: config_store.hpp  variable.hpp  variable_group.hpp
multicore_engine_core/include/containers/: dual_container_map.hpp  generic_flat_map.hpp  map_wrapper.hpp  scratch_pad_pool.hpp  smart_object_pool.hpp  smart_object_pool_range.hpp  smart_pool_ptr.hpp  unordered_object_pool.hpp
multicore_engine_core/include/core/: core_defs.hpp  engine.hpp  game_state.hpp  game_state_machine.hpp  system.hpp  system_state.hpp
multicore_engine_core/include/entity/: component.hpp  component_configuration.hpp  component_property_assignment.hpp  component_type.hpp  component_type_id_manager.hpp  ecs_types.hpp  entity.hpp  entity_configuration.hpp  entity_manager.hpp  entity_reference.hpp  entity_type.hpp
multicore_engine_core/include/glfw/: cursor.hpp  glfw_defs.hpp  instance.hpp  joystick.hpp  monitor.hpp  window.hpp
multicore_engine_core/include/glfw_wrapper/: cursor.hpp  glfw_defs.hpp  glfw_instance.hpp  instance.hpp  joystick.hpp  monitor.hpp  window.hpp
multicore_engine_core/include/memory/: align.hpp  (+1 more)
multicore_engine_core_tests/: .cproject  .project  CMakeLists.txt
multicore_engine_core_tests/include/: gtest.hpp
multicore_engine_core_tests/src/: main.cpp  unorderedobjectpool_test.cpp
multicore_engine_demo/: .cproject  .gitignore  .project  CMakeLists.txt
multicore_engine_demo/src/: main.cpp
multicore_engine_graphics_test/: .cproject  .project  CMakeLists.txt
multicore_engine_graphics_test/src/: main.cpp
multicore_engine_headed/: .cproject  .project  CMakeLists.txt
multicore_engine_load_unit_gen/: .cproject  .project  CMakeLists.txt  test.lud
multicore_engine_load_unit_gen/src/: main.cpp
multicore_engine_model_converter/: .cproject  .project  CMakeLists.txt
multicore_engine_model_converter/src/: main.cpp
multicore_engine_pack_file_gen/: .cproject  .project  CMakeLists.txt  test.packdesc
multicore_engine_pack_file_gen/src/: main.cpp
multicore_engine_parsers/: .cproject  .project  CMakeLists.txt
multicore_engine_parsers/src/: entity_template_lang_parser_frontend.cpp  entity_text_file_parser.cpp  entity_text_file_parser_frontend.cpp  load_unit_description_parser.cpp  pack_file_description_parser.cpp
multicore_engine_renderer/: .cproject  .project  CMakeLists.txt
multicore_engine_renderer/src/: dummy.cpp
multicore_engine_tests/: .cproject  .project  CMakeLists.txt
multicore_engine_tests/include/: gtest.hpp
multicore_engine_tests/src/: vk_mock_interface.cpp
tools_bootstrap/: CMakeLists.txt
(+529 files in other folders)
