cmake_minimum_required (VERSION 2.6)
project(multicore_engine_core_tests)
file(GLOB_RECURSE CORE_TESTS_SRC "src/*.cpp")
add_executable(multicore_engine_core_tests ${CORE_TESTS_SRC})
target_link_libraries(multicore_engine_core_tests multicore_engine_core)
if(NOT MSVC)
	target_link_libraries(multicore_engine_core_tests boost_unit_test_framework)
endif()
if(MSVC)
	set_target_properties(multicore_engine_core_tests PROPERTIES LINK_FLAGS_RELEASE "/LTCG")
endif()
