cmake_minimum_required (VERSION 2.6)
project(multicore_engine_demo)
file(GLOB_RECURSE DEMO_SRC "src/*.cpp")
file(GLOB_RECURSE DEMO_HEADERS "include/*.cpp")
add_executable(multicore_engine_demo ${DEMO_SRC} ${DEMO_HEADERS})
target_link_libraries(multicore_engine_demo multicore_engine_core)
if(MSVC)
	set_target_properties(multicore_engine_demo PROPERTIES LINK_FLAGS_RELEASE "/LTCG")
	set_target_properties(multicore_engine_demo PROPERTIES LINK_FLAGS_MINSIZEREL "/LTCG")
	set_target_properties(multicore_engine_demo PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/LTCG")
endif()
add_dependencies(multicore_engine_demo multicore_engine_assets_packs)
