cmake_minimum_required (VERSION 3.7)
project(multicore_engine_parsers)
file(GLOB_RECURSE PARSERS_SRC "src/*.cpp")
file(GLOB_RECURSE PARSERS_HEADERS "src/*.hpp")
add_library(multicore_engine_parsers STATIC ${PARSERS_SRC} ${PARSERS_HEADERS})
make_src_groups()
if (${CMAKE_CXX_COMPILER_ID} MATCHES "GNU")
	set(CMAKE_CXX_FLAGS_DEBUG "")
endif ()
if(MSVC)
	set_target_properties(multicore_engine_parsers PROPERTIES LINK_FLAGS_RELEASE "/LTCG")
endif()
